# QianRuShi_hw

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: README.md
include/capture/: capture.h
include/common/: config.h  error.h  log.h
include/encode/: encoder.h
include/net/: server.h  ws.h
include/pipeline/: pipeline.h  queue.h  types.h
include/protocol/: frame_proto.h
scripts/: build.sh  run.sh
src/: main.c
src/capture/: capture_x11.c
src/common/: config.c  error.c  log.c
src/encode/: encoder_ffmpeg.c
src/net/: server.c  ws.c
src/pipeline/: pipeline.c  queue.c  types.c
src/protocol/: frame_proto.c
web/: index.html
web/css/: style.css
web/js/: decoder.js  main.js  protocol.js  renderer.js  socket.js
